# CourseOnCompilers

./: .gitignore  README.md
CourseWork/: CMakeLists.txt  conanfile.txt  lisp.cpp  main.cc
CourseWork/src/: CMakeLists.txt  lisp.cc  lisp.h
CourseWork/tst/: CMakeLists.txt  lisp.cc
lab_01/: CMakeLists.txt  README.md  main.cc
lab_01/src/: CMakeLists.txt  dfa.cc  dfa.h  syntaxtree.cc  syntaxtree.h  utils.cc  utils.h
lab_01/tst/: CMakeLists.txt  dfa.cc  syntaxtree.cc  utils.cc
lab_02/: CMakeLists.txt  README.md  main.cc
lab_02/src/: CMakeLists.txt  chomskyutils.cc  chomskyutils.h  leftutils.cc  leftutils.h  utils.cc  utils.h
lab_02/tst/: CMakeLists.txt  chomskyutils.cc  leftutils.cc  utils.cc
lab_03/: CMakeLists.txt  README.md  conanfile.txt  main.cc
lab_03/src/: CMakeLists.txt  parser.cc  parser.h
lab_03/tst/: CMakeLists.txt  parser.cc
lab_04/: CMakeLists.txt  a.out  main.cc
lab_04/a.out.dSYM/Contents/Resources/DWARF/: a.out
lab_04/src/: CMakeLists.txt  parser.cc  parser.h
lab_04/tst/: CMakeLists.txt  parser.cc
